welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:15: error: type mismatch;
 found   : Unit
 required: String
    if(day==6){
    ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
  if(vacation==true){
  ^